--- a/styles/index.css
+++ b/styles/index.css
@@ -6,17 +6,9 @@
 
 
 
-.card-body {
-    border: 1px solid black;
-    width: 300px;
+ .card-body:hover {
+    transform: scale(1.2);
+    transition: transform 0.3s ease-in-out;
  }
  
- .img-container img {
-    max-width: 100%;
-    height: auto;
- }
- 
- .card-body p, .card-body h1 {
-    margin: 8px;
- }
  
