--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,88 @@
-
-
-
-
-
-
-
-
- .card-body:hover {
-    transform: scale(1.2);
-    transition: transform 0.3s ease-in-out;
- }
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fafaff;
+  }
+  
+  .main_container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  header {
+    background-color: #0f4c5c;
+    color: #fff;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  header h1 {
+    font-size: 24px; 
+     margin: 0;
+  }
+  
+  header ul {
+    list-style: none;
+     margin: 0;
+    padding: 0;
+  }
+  
+  header ul li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+  
+  header a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  
+  main {
+    flex-grow: 1;
+    padding: 20px;
+  }
+  
+  footer {
+    background-color: #a8dadc;
+    padding: 20px;
+    
+  }
  
+  h3 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+  }
+  h3:hover {
+    color: 57070c;
+    text-decoration: underline;
+    transform: scale(1.1);
+  }
+  /* can't get the animation//transtion to work, I want the card body to grow in size a bit when hovering over it on the mouse */
+  .card-body {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 400px;
+
+
+  }
+  
+  #cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    
+  }
+  /* Can't get these to work, I want the newsletter form on the left, and the social media icons on the right */
+  footer {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+
  
