--- a/styles/page3.css
+++ b/styles/page3.css
@@ -9,8 +9,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    align-content: space-between;
-  }
+  
+}
   
   header {
     background-color: #0f4c5c;
@@ -43,6 +43,12 @@ body {
   }
 
 
+  .about-me {
+    text-align: center;
+    border: 2px solid gray;
+    padding: 20px;
+    margin: 20px auto;
+  }
 
   footer {
     background-color: #a8dadc;
@@ -53,5 +59,5 @@ body {
   footer div {
     display: flex;
     justify-content: space-around;
-    ali
+    
   }
